crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_recursive_let.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
CYCLIC VALUE

  × I do not allow cyclic values in `let` expressions.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: The `name` value depends on itself through the following chain of definitions:

            ┌─────┐
            │    name
            │     ↓
            │    other
            └─────┘

        Hint: The root problem is often a typo in some variable name, but I recommend
        reading <https://nash-script.dev/hints/bad-recursion> for more detailed advice,
        especially if you actually do need a recursive value.
