crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_recursive_superclass.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
TRAIT PROBLEM

  × These superclass declarations form a cycle:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help:     ┌─────┐
            │    First
            │     ↓
            │    Second
            └─────┘

        Remove a superclass dependency to break the cycle. A trait cannot require itself
        through its superclasses.
