crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_reflexive_lift_overlap.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "impl (Big 'a) => Lift 'a 'a where\n    lift x = x"
---
nash::names::reflexive_lift_overlap

  × This impl overlaps the reflexive `Lift` rule:
   ╭─[Main.nash:1:23]
 1 │ impl (Big 'a) => Lift 'a 'a where
   ·                       ─────
 2 │     lift x = x
   ╰────
  help: Every type can lift and lower to itself. Remove this impl or choose heads that
        do not overlap that built-in rule.
