crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_refutable_bind_pattern.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "value = do\n    Just x <- action\n    pure x"
---
nash::names::refutable_bind_pattern

  × This `do` binding has a pattern that can fail to match:
   ╭─[Main.nash:2:5]
 1 │ value = do
 2 │     Just x <- action
   ·     ──────
 3 │     pure x
   ╰────
  help: Bind a variable here, then use `case` to handle every variant.
