crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_representation_mismatch.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "value : (Int -> Int : Storable)\nvalue x = x"
---
nash::names::representation_mismatch

  × This position requires `Storable` in the type annotation:
   ╭─[Main.nash:1:9]
 1 │ value : (Int -> Int : Storable)
   ·         ───────────────────────
 2 │ value x = x
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
