crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_shadowing.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "name = 1\nvalue name = name"
---
nash::names::shadowing

  × Name `name` is already defined.
   ╭─[Main.nash:2:7]
 1 │ name = 1
   · ──┬─
   ·   ╰── first defined here
 2 │ value name = name
   ·       ──┬─
   ·         ╰── shadows this name
   ╰────
  help: Rename one of these bindings.
