crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_superclass_bad_arg.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::superclass_bad_arg

  × The `Equal` superclass has an invalid argument:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Superclass arguments must be parameters declared by this trait. Replace this
        argument with the intended trait parameter.
