crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_type_vars_messed_up_in_alias.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × Type alias `Box` has some type variable problems.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Type variable `b` appears in the definition, but I do not see it declared.
        Likewise, type variable `a` is declared, but not used.

        Match the declaration to the variables used:

            type alias Box 'b = ...
