crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_type_vars_unbound_in_union.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type Box = Box 'a"
---
nash::names::type_vars_unbound_in_union

  × The `Box` type uses an unbound type variable `a` in its definition:
   ╭─[Main.nash:1:17]
 1 │ type Box = Box 'a
   ·                 ─
   ╰────
  help: Declare the type variables:

            type Box 'a = ...
