crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_unknown_method.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × The `Equal` trait has no `name` method:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Remove or rename this method to match the trait declaration.
